tests/single_instruction_translation_validation/mcsema/register-variants-samereg/vcvtss2si_r64_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:181:24: error: use of undefined value '@my.nearbyint.f32'
  %8 = tail call float @my.nearbyint.f32(float %7) #22
                       ^
0.02user 0.02system 0:00.05elapsed 87%CPU (0avgtext+0avgdata 27444maxresident)k
0inputs+16outputs (0major+3274minor)pagefaults 0swaps
